fix docs rtk-query/usage/queryies typo

--- a/docs/rtk-query/usage/queries.mdx
+++ b/docs/rtk-query/usage/queries.mdx
@@ -74,7 +74,7 @@ const api = createApi({
           updateCachedData,
         }
       ) {},
-      // The 2nd parameter is the destructured `QueryCacheLifecycleApi`
+      // The 3rd parameter is the destructured `QueryCacheLifecycleApi`
       async onCacheEntryAdded(
         arg,
         {
