added optional operator to rehydration return

--- a/docs/rtk-query/usage/persistence-and-rehydration.mdx
+++ b/docs/rtk-query/usage/persistence-and-rehydration.mdx
@@ -45,7 +45,7 @@ export const api = createApi({
   // highlight-start
   extractRehydrationInfo(action, { reducerPath }) {
     if (action.type === REHYDRATE) {
-      return action.payload[reducerPath]
+      return action.payload?.[reducerPath]
     }
   },
   // highlight-end
