--- a/docs/rtk-query/usage/examples.mdx
+++ b/docs/rtk-query/usage/examples.mdx
@@ -79,7 +79,7 @@ The example has some intentionally wonky behavior... when editing the name of a 
 ## React GraphQL with custom client
 
 <iframe
-  src="https://codesandbox.io/s/determined-shannon-iv2p5x"
+  src="https://codesandbox.io/embed/github/reduxjs/redux-toolkit/tree/master/examples/query/reactgraphql-custom-client?fontsize=12&hidenavigation=1&theme=dark&module=%2Fsrc%2Fapi.js&runonclick="
   style={{
     width: '100%',
     height: '800px',
