--- a/docs/api/configureStore.mdx
+++ b/docs/api/configureStore.mdx
@@ -23,7 +23,7 @@ type ConfigureEnhancersCallback = (
 
 interface ConfigureStoreOptions<
   S = any,
-  A extends Action = AnyAction,
+  A extends Action = UnknownAction,
   M extends Middlewares<S> = Middlewares<S>
 > {
   /**
@@ -66,7 +66,7 @@ interface ConfigureStoreOptions<
   enhancers?: StoreEnhancer[] | ConfigureEnhancersCallback
 }
 
-function configureStore<S = any, A extends Action = AnyAction>(
+function configureStore<S = any, A extends Action = UnknownAction>(
   options: ConfigureStoreOptions<S, A>
 ): EnhancedStore<S, A>
 ```
@@ -107,7 +107,8 @@ a list of the specific options that are available.
 Defaults to `true`.
 
 #### `trace`
-The Redux DevTools Extension recently added [support for showing action stack traces](https://github.com/reduxjs/redux-devtools/blob/main/extension/docs/Features/Trace.md) that show exactly where each action was dispatched. 
+
+The Redux DevTools Extension recently added [support for showing action stack traces](https://github.com/reduxjs/redux-devtools/blob/main/extension/docs/Features/Trace.md) that show exactly where each action was dispatched.
 Capturing the traces can add a bit of overhead, so the DevTools Extension allows users to configure whether action stack traces are captured by [setting the 'trace' argument](https://github.com/reduxjs/redux-devtools/blob/main/extension/docs/API/Arguments.md#trace).
 If the DevTools are enabled by passing `true` or an object, then `configureStore` will default to enabling capturing action stack traces in development mode only.
 
@@ -195,7 +196,7 @@ const preloadedState = {
   visibilityFilter: 'SHOW_COMPLETED',
 }
 
-const debounceNotify = _.debounce(notify => notify());
+const debounceNotify = _.debounce((notify) => notify())
 
 const store = configureStore({
   reducer,
