Begin updating slice docs for new 2.0 features

--- a/docs/api/createSelector.mdx
+++ b/docs/api/createSelector.mdx
@@ -18,9 +18,11 @@ For more details on using `createSelector`, see:
 - [Idiomatic Redux: Using Reselect Selectors for Encapsulation and Performance](https://blog.isquaredsoftware.com/2017/12/idiomatic-redux-using-reselect-selectors/)
 - [React/Redux Links: Reducers and Selectors](https://github.com/markerikson/react-redux-links/blob/master/redux-reducers-selectors.md)
 
-> **Note**: Prior to v0.7, RTK re-exported `createSelector` from [`selectorator`](https://github.com/planttheidea/selectorator), which
-> allowed using string keypaths as input selectors. This was removed, as it ultimately did not provide enough benefits, and
-> the string keypaths made static typing for selectors difficult.
+:::note
+Prior to v0.7, RTK re-exported `createSelector` from [`selectorator`](https://github.com/planttheidea/selectorator), which
+allowed using string keypaths as input selectors. This was removed, as it ultimately did not provide enough benefits, and
+the string keypaths made static typing for selectors difficult.
+:::
 
 # `createDraftSafeSelector`
 
