--- a/docs/api/createReducer.mdx
+++ b/docs/api/createReducer.mdx
@@ -70,15 +70,15 @@ const counterReducer = createReducer(initialState, (builder) => {
 
 ## Usage with the "Builder Callback" Notation
 
-[overloadSummary](docblock://createReducer.ts?token=createReducer&overload=0)
+[overloadSummary](docblock://createReducer.ts?token=createReducer)
 
 ### Parameters
 
-[params](docblock://createReducer.ts?token=createReducer&overload=0)
+[params](docblock://createReducer.ts?token=createReducer)
 
 ### Example Usage
 
-[examples](docblock://createReducer.ts?token=createReducer&overload=0)
+[examples](docblock://createReducer.ts?token=createReducer)
 
 ### Builder Methods
 
@@ -113,9 +113,10 @@ The generated reducer function.
 The reducer will have a `getInitialState` function attached that will return the initial state when called. This may be useful for tests or usage with React's `useReducer` hook:
 
 ```js
-const counterReducer = createReducer(0, {
-  increment: (state, action) => state + action.payload,
-  decrement: (state, action) => state - action.payload,
+const counterReducer = createReducer(0, (builder) => {
+  builder
+    .addCase('increment', (state, action) => state + action.payload)
+    .addCase('decrement', (state, action) => state - action.payload)
 })
 
 console.log(counterReducer.getInitialState()) // 0
@@ -123,37 +124,7 @@ console.log(counterReducer.getInitialState()) // 0
 
 ### Example Usage
 
-[examples](docblock://createReducer.ts?token=createReducer&overload=1)
-
-### Matchers and Default Cases as Arguments
-
-The most readable approach to define matcher cases and default cases is by using the `builder.addMatcher` and `builder.addDefaultCase` methods described above, but it is also possible to use these with the object notation by passing an array of `{matcher, reducer}` objects as the third argument, and a default case reducer as the fourth argument:
-
-```js
-const isStringPayloadAction = (action) => typeof action.payload === 'string'
-
-const lengthOfAllStringsReducer = createReducer(
-  // initial state
-  { strLen: 0, nonStringActions: 0 },
-  // normal reducers
-  {
-    /*...*/
-  },
-  //  array of matcher reducers
-  [
-    {
-      matcher: isStringPayloadAction,
-      reducer(state, action) {
-        state.strLen += action.payload.length
-      },
-    },
-  ],
-  // default reducer
-  (state) => {
-    state.nonStringActions++
-  }
-)
-```
+[examples](docblock://createReducer.ts?token=createReducer)
 
 ## Direct State Mutation
 
