finish my sentence

--- a/docs/api/createSlice.mdx
+++ b/docs/api/createSlice.mdx
@@ -165,7 +165,7 @@ This is used by `combineSlices` and the default generated `slice.selectors`.
 
 A set of selectors that receive the slice state as their first parameter, and any other parameters.
 
-Each selector will have a corresponding key in the
+Each selector will have a corresponding key in the resulting [`selectors`](#selectors-1) object.
 
 ## Return Value
 
