--- a/docs/api/createSlice.mdx
+++ b/docs/api/createSlice.mdx
@@ -197,7 +197,7 @@ The functions passed to the `reducers` parameter can be accessed through the `ca
 
 Result's function `getInitialState` provides access to the initial state value given to the slice. If a lazy state initializer was provided, it will be called and a fresh value returned.
 
-`injectInto` creates an instance of the slice that is aware it's been injected - see `combineSlices`.
+`injectInto` creates an instance of the slice that is aware it's been injected - see [`combineSlices`](./combineSlices#slice-integration).
 
 :::note
 The result object is conceptually similar to a
